CI 실패 수정과 README 포트폴리오 보강